logs/tracking/build.make.362.log.stderr
In file included from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:52:0,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h: In member function ‘bool pcl::visualization::AreaPickingEvent::getPointsIndices(std::vector<int>&) const’:
/usr/include/pcl-1.7/pcl/visualization/area_picking_event.h:64:30: warning: comparison between signed and unsigned integer expressions [-Wsign-compare]
           if (nb_points_ == -1)
                              ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> optimize(Eigen::Matrix<float, 8, 1>, cv::Mat, cv::Mat, cv::Mat, cv::Mat, cv::Mat, Eigen::MatrixXf, Eigen::Matrix3f, cv::Mat)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:129:8: warning: unused variable ‘e_init_norm’ [-Wunused-variable]
  float e_init_norm = 0;
        ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp: In function ‘Eigen::Matrix<float, 8, 1> directTransformationEstimation(std::vector<cv::Mat>, std::vector<cv::Mat>, std::vector<cv::Mat>, cv::Mat&, Eigen::Matrix<float, 8, 1>)’:
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:248:7: error: expected primary-expression before ‘:’ token
       :RowVectorXf X = Eigen::RowVectorXf::LinSpaced(ref.cols,0,ref.cols-1).replicate(1,ref.rows);
       ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:248:7: error: expected ‘;’ before ‘:’ token
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:250:28: error: ‘X’ was not declared in this scope
       pixel_coord.row(0) = X;
                            ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:250:28: note: suggested alternative:
In file included from /usr/include/boost/function/detail/prologue.hpp:17:0,
                 from /usr/include/boost/function.hpp:24,
                 from /usr/include/pcl-1.7/pcl/visualization/boost.h:49,
                 from /usr/include/pcl-1.7/pcl/visualization/common/actor_map.h:48,
                 from /usr/include/pcl-1.7/pcl/visualization/pcl_visualizer.h:47,
                 from /usr/include/pcl-1.7/pcl/visualization/cloud_viewer.h:39,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/PointCloudMap.h:10,
                 from /home/dexheimere/thesis_ws/src/tracking/include/tracking/SparseAlignment.h:13,
                 from /home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:1:
/usr/include/boost/function/function_base.hpp:92:13: note:   ‘boost::detail::function::X’
       class X;
             ^
/home/dexheimere/thesis_ws/src/tracking/src/SparseAlignment.cpp:247:7: warning: label ‘Eigen’ defined but not used [-Wunused-label]
       Eigen:
       ^
make[2]: *** [CMakeFiles/tracking.dir/src/SparseAlignment.cpp.o] Error 1
make[1]: *** [CMakeFiles/tracking.dir/all] Error 2
make: *** [all] Error 2
